--- a/kubernetes/apps/k0s/security/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/externalsecret.yaml
@@ -13,8 +13,8 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.${LOCAL_DOMAIN}"
-      path: "secret/${ENVIRONMENT}"
+      server: "https://vault.${DOMAIN}"
+      path: "secret"
       version: "v2"
       auth:
         kubernetes:
