add local domain

--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -10,9 +10,10 @@ stringData:
   CILIUM_ID: "${CILIUM_ID}"
   CLOUDFLARE_EMAIL: "${CLOUDFLARE_EMAIL}"
   DOCKER_PRIVATE_REGISTRY: "${DOCKER_PRIVATE_REGISTRY}"
-  DOMAIN: "${DOMAIN}"
+  DOMAIN: "${DOMAIN}"  
   ENVIRONMENT: "${ENVIRONMENT}"
   IPAM_CIDR: "${IPAM_CIDR}"
+  LOCAL_DOMAIN: "${LOCAL_DOMAIN}"
   NGINX_LB_IP: "${NGINX_LB_IP}"
   NFS_SERVER_IP: "${NFS_SERVER_IP}"
   SERVER_CIDR: "${SERVER_CIDR}"
