--- a/kubernetes/apps/k0s/security/lldap/database/cluster.yaml
+++ b/kubernetes/apps/k0s/security/lldap/database/cluster.yaml
@@ -14,13 +14,13 @@ spec:
       kube-image-keeper.enix.io/image-caching-policy: ignore
   primaryUpdateStrategy: unsupervised
   bootstrap:
-    initdb:
-      database: lldap
-      owner: lldap
-      secret:
-        name: lldap-database-user
-    # recovery:
-    #   source: &previousCluster lldap-1
+    # initdb:
+    #   database: lldap
+    #   owner: lldap
+    #   secret:
+    #     name: lldap-database-user
+    recovery:
+      source: &previousCluster lldap-1
   storage:
     size: 2Gi
     storageClass: local-path
@@ -48,15 +48,15 @@ spec:
         secretAccessKey:
           name: lldap-database-superuser
           key: secret
-  # externalClusters:
-  # - name: *previousCluster
-  #   barmanObjectStore:
-  #     destinationPath: s3://db-backup/lldap
-  #     endpointURL: "https://minio.${LOCAL_DOMAIN}"
-  #     s3Credentials:
-  #       accessKeyId:
-  #         name: lldap-database-superuser
-  #         key: access-key
-  #       secretAccessKey:
-  #         name: lldap-database-superuser
-  #         key: secret
+  externalClusters:
+  - name: *previousCluster
+    barmanObjectStore:
+      destinationPath: s3://db-backup/lldap
+      endpointURL: "https://minio.${LOCAL_DOMAIN}"
+      s3Credentials:
+        accessKeyId:
+          name: lldap-database-superuser
+          key: access-key
+        secretAccessKey:
+          name: lldap-database-superuser
+          key: secret
