--- a/kubernetes/apps/k0s/security/lldap/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/lldap/app/externalsecret.yaml
@@ -15,9 +15,7 @@ spec:
       engineVersion: v2
       data:
         LLDAP_JWT_SECRET: "{{ .LLDAP_JWT_SECRET }}"
-        LLDAP_LDAP_USER_PASS: "{{ .LLDAP_USER_PASSWORD }}"
-        LLDAP_USER_DN: "{{ .LLDAP_USER_DN }}"
-        LLDAP_USER_PASSWORD: "{{ .LLDAP_USER_PASSWORD }}"
+        LLDAP_LDAP_USER_PASS: "{{ .LLDAP_LDAP_USER_PASS }}"
         LLDAP_LDAP_USER_EMAIL: "{{ .LLDAP_LDAP_USER_EMAIL }}"
         LLDAP_SERVER_KEY_SEED: "{{ .LLDAP_SERVER_KEY_SEED }}"
         LLDAP_LDAP_BASE_DN: "{{ .LLDAP_LDAP_BASE_DN }}"
