relocate dex/oauth2-proxy

--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
                 config:
                   host: "lldap:389"
                   bindDN: "uid={{.LLDAP_USER_DN}},ou=people,{{.LLDAP_LDAP_BASE_DN}}"
-                  bindPW: "{{.LLDAP_USER_PASSWORD}}"
+                  bindPW: "{{.LLDAP_LDAP_USER_PASS}}"
                   userSearch:
                     baseDN: "ou=people,{{.LLDAP_LDAP_BASE_DN}}"
                     filter: "(&({username_attribute}={input})(objectClass=person))"
