fix vault kv secrets

--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -271,9 +271,8 @@ tasks:
           LLDAP_DB_BACKUP_ACCESS_KEY="{{.LLDAP_DB_BACKUP_ACCESS_KEY}}"
           LLDAP_DB_BACKUP_SECRET="{{.LLDAP_DB_BACKUP_SECRET}}"
           LLDAP_JWT_SECRET="{{.LLDAP_JWT_SECRET}}"
-          LLDAP_USER_DN="{{.LLDAP_USER_DN}}"
-          LLDAP_USER_PASSWORD="{{.LLDAP_USER_PASSWORD}}"
           LLDAP_LDAP_USER_EMAIL="{{.LLDAP_LDAP_USER_EMAIL}}"
+          LLDAP_LDAP_USER_PASS="{{.LLDAP_LDAP_USER_PASS}}"
           LLDAP_SERVER_KEY_SEED="{{.LLDAP_SERVER_KEY_SEED}}"
           LLDAP_LDAP_BASE_DN="{{.LLDAP_LDAP_BASE_DN}}"
       # security/oauth2-proxy
