--- a/kubernetes/apps/k8s/monitoring/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/externalsecret.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.${LOCAL_DOMAIN}"
+      server: "${VAULT_ADDR}"
       path: "secret/${ENVIRONMENT}"
       version: "v2"
       auth:
