--- a/kubernetes/bootstrap/k8s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k8s/sharedsecrets.yaml
@@ -25,7 +25,7 @@ spec:
         NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
         SERVER_CIDR: "{{.SERVER_CIDR}}"
         SLACK_WEBHOOK: "{{.SLACK_WEBHOOK}}"
-        VAULT_ADDR: "${VAULT_ADDR}"
+        VAULT_ADDR: "{{.VAULT_ADDR}}"
         VIP_IP: "{{.VIP_IP}}"
         VIP_PORT: "{{.VIP_PORT}}"
   dataFrom:
