--- a/kubernetes/bootstrap/k8s/externalsecret.yaml
+++ b/kubernetes/bootstrap/k8s/externalsecret.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.feelingsmachine.com"
+      server: "https://vault.logfold.com"
       path: "secret/k8s"
       version: "v2"
       auth:
