--- a/kubernetes/bootstrap/k8s/externalsecret.yaml
+++ b/kubernetes/bootstrap/k8s/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
   provider:
     vault:
       server: "https://vault.logfold.com"
-      path: "secret/k8s"
+      path: "secret"
       version: "v2"
       auth:
         kubernetes:
