--- a/kubernetes/bootstrap/k8s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k8s/sharedsecrets.yaml
@@ -30,4 +30,4 @@ spec:
         VIP_PORT: "{{.VIP_PORT}}"
   dataFrom:
     - extract:
-        key: /cluster
+        key: /cluster/{{.ENVIRONMENT}}
