--- a/kubernetes/apps/k8s/monitoring/gatus/database/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/gatus/database/externalsecret.yaml
@@ -18,19 +18,19 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: /monitoring/gatus
+        key: /gatus
         property: GATUS_POSTGRES_SUPER_USER
     - secretKey: password
       remoteRef:
-        key: /monitoring/gatus
+        key: /gatus
         property: GATUS_POSTGRES_SUPER_PASSWORD
     - secretKey: access-key
       remoteRef:
-        key: /monitoring/gatus
+        key: /gatus
         property: GATUS_DB_BACKUP_ACCESS_KEY
     - secretKey: secret
       remoteRef:
-        key: /monitoring/gatus
+        key: /gatus
         property: GATUS_DB_BACKUP_SECRET
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -52,9 +52,9 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: /monitoring/gatus
+        key: /gatus
         property: GATUS_POSTGRES_USER
     - secretKey: password
       remoteRef:
-        key: /monitoring/gatus
+        key: /gatus
         property: GATUS_POSTGRES_PASSWORD
