--- a/kubernetes/apps/k8s/monitoring/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
   provider:
     vault:
       server: "${VAULT_ADDR}"
-      path: "secret/data/monitoring"
+      path: "secret/monitoring"
       version: "v2"
       auth:
         kubernetes:
