--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -19,38 +19,38 @@ spec:
         ldap-toml: |
           verbose_logging = true
           [[servers]]
-          host = "{{ .LDAP_SERVER }}"
-          port = 636
-          use_ssl = true
+          host = "lldap.{{.PRIVATE_DOMAIN}}"
+          port = 389
+          use_ssl = false
           start_tls = false
           ssl_skip_verify =  true
-          bind_dn = "uid={{ .LDAP_USERNAME }},cn=users,{{ .LDAP_ROOT }}"
-          bind_password = "{{ .LDAP_PASSWORD }}"
+          bind_dn = "uid=admin,ou=people,{{ .LLDAP_LDAP_BASE_DN }}"
+          bind_password = "{{ .LLDAP_LDAP_USER_PASS }}"
 
           search_filter = "(uid=%s)"
 
           # An array of base dns to search through
-          search_base_dns = ["cn=users,{{ .LDAP_ROOT }}"]
+          search_base_dns = ["{{ .LLDAP_LDAP_BASE_DN }}"]
 
           group_search_filter = "(&(objectClass=posixGroup)(memberUid=%s))"
           group_search_filter_user_attribute = "uid"
-          group_search_base_dns = ["cn=groups,{{ .LDAP_ROOT }}"]
+          group_search_base_dns = ["ou=groups,{{ .LLDAP_LDAP_BASE_DN }}"]
 
           # Specify names of the ldap attributes your ldap uses
           [servers.attributes]
-          name = "givenName"
+          name = "displayName"
           surname = "sn"
           username = "uid"
           member_of = "memberOf"
-          email =  "Email"
+          email =  "mail"
 
           [[servers.group_mappings]]
-          group_dn = "cn=administrators,cn=groups,{{ .LDAP_ROOT }}"
+          group_dn = "ou=grafana-admins,ou=groups,{{ .LLDAP_LDAP_BASE_DN }}"
           org_role = "Admin"
           org_id = 1
 
           [[servers.group_mappings]]
-          group_dn = "cn=grafana,cn=groups,{{ .LDAP_ROOT}}"
+          group_dn = "ou=grafana-users,ou=groups,{{ .LLDAP_LDAP_BASE_DN}}"
           org_role = "Viewer"
           org_id = 1
   dataFrom:
