--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -194,6 +194,7 @@ tasks:
           SLACK_WEBHOOK="{{.SLACK_WEBHOOK}}"
           IPAM_CIDR="{{.IPAM_CIDR}}"
           LOCAL_DOMAIN="{{.LOCAL_DOMAIN}}"
+          PRIVATE_DOMAIN="{{.PRIVATE_DOMAIN}}"
           NGINX_LB_IP="{{.NGINX_LB_IP}}"
           NFS_SERVER_IP="{{.NFS_SERVER_IP}}"
           SERVER_CIDR="{{.SERVER_CIDR}}"
