--- a/kubernetes/bootstrap/k8s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k8s/sharedsecrets.yaml
@@ -20,6 +20,10 @@ spec:
         CLOUDFLARE_EMAIL: "{{.CLOUDFLARE_EMAIL}}"
         DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
         DOMAIN: "{{.DOMAIN}}"
+        EMQX_LB_IP: "{{.EMQX_LB_IP}}"
+        IPAM_CIDR: "{{.IPAM_CIDR}}"
+        LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
+        PRIVATE_DOMAIN: "{{.PRIVATE_DOMAIN}}"
         ENVIRONMENT: "{{.ENVIRONMENT}}"
         NGINX_LB_IP: "{{.NGINX_LB_IP}}"
         NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
