--- a/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
@@ -45,14 +45,14 @@ spec:
     service:
       main:
         ports:
-          http:
-            port: *port
+          # http:
+          #   port: *port
           ldap:
             enabled: true
             port: *ldapPort
     ingress:
       main:
-        enabled: false
+        enabled: true
         ingressClassName: nginx
         hosts:
           - host: &host "lldap.${DOMAIN}"
