add lb ip for lldap

--- a/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
@@ -44,9 +44,10 @@ spec:
           name: lldap-secret
     service:
       main:
+        type: LoadBalancer
+        annotations:
+          io.cilium/lb-ipam-ips: "${LDAP_LB_IP}"
         ports:
-          # http:
-          #   port: *port
           ldap:
             enabled: true
             port: *ldapPort
