--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -14,6 +14,7 @@ stringData:
   ENVIRONMENT: "${ENVIRONMENT}"
   IPAM_CIDR: "${IPAM_CIDR}"
   LOCAL_DOMAIN: "${LOCAL_DOMAIN}"
+  LDAP_LB_IP: "${LDAP_LB_IP}"
   NGINX_LB_IP: "${NGINX_LB_IP}"
   NFS_SERVER_IP: "${NFS_SERVER_IP}"
   SERVER_CIDR: "${SERVER_CIDR}"
