--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
     #   service:
     #     loadBalancerIP: "${CILIUM_LB_IP}"
     ingressController:
-      enabled: true
+      enabled: false
       enforceHttps: true
       loadbalancerMode: shared
       defaultSecretName: "${DOMAIN/./-}-tls"
