--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -38,11 +38,11 @@ spec:
 
           # Specify names of the ldap attributes your ldap uses
           [servers.attributes]
-          name = "displayName"
+          name = "givenName"
           surname = "sn"
           username = "uid"
           member_of = "memberOf"
-          email =  "mail"
+          email =  "Email"
 
           [[servers.group_mappings]]
           group_dn = "ou=grafana-admins,ou=groups,{{ .LLDAP_LDAP_BASE_DN }}"
@@ -56,3 +56,5 @@ spec:
   dataFrom:
     - extract:
         key: /monitoring/grafana
+    - extract:
+        key: /security/lldap
