--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -24,17 +24,17 @@ spec:
           use_ssl = false
           start_tls = false
           ssl_skip_verify =  true
-          bind_dn = "uid=admin,ou=people,{{ .LLDAP_LDAP_BASE_DN }}"
-          bind_password = "{{ .LLDAP_LDAP_USER_PASS }}"
+          bind_dn = "uid=admin,ou=people,{{ .LDAP_ROOT }}"
+          bind_password = "{{ .LDAP_PASSWORD }}"
 
           search_filter = "(uid=%s)"
 
           # An array of base dns to search through
-          search_base_dns = ["{{ .LLDAP_LDAP_BASE_DN }}"]
+          search_base_dns = ["{{ .LDAP_ROOT }}"]
 
           group_search_filter = "(&(objectClass=posixGroup)(memberUid=%s))"
           group_search_filter_user_attribute = "uid"
-          group_search_base_dns = ["ou=groups,{{ .LLDAP_LDAP_BASE_DN }}"]
+          group_search_base_dns = ["ou=groups,{{ .LDAP_ROOT }}"]
 
           # Specify names of the ldap attributes your ldap uses
           [servers.attributes]
@@ -45,16 +45,14 @@ spec:
           email =  "Email"
 
           [[servers.group_mappings]]
-          group_dn = "ou=grafana-admins,ou=groups,{{ .LLDAP_LDAP_BASE_DN }}"
+          group_dn = "ou=grafana-admins,ou=groups,{{ .LDAP_ROOT }}"
           org_role = "Admin"
           org_id = 1
 
           [[servers.group_mappings]]
-          group_dn = "ou=grafana-users,ou=groups,{{ .LLDAP_LDAP_BASE_DN}}"
+          group_dn = "ou=grafana-users,ou=groups,{{ .LDAP_ROOT}}"
           org_role = "Viewer"
           org_id = 1
   dataFrom:
     - extract:
         key: /monitoring/grafana
-    - extract:
-        key: /security/lldap
