--- a/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
           io.cilium/lb-ipam-ips: "${LLDAP_LB_IP}"
         ports:
           http:
-            enabled: false
+            port: *port
           ldap:
             enabled: true
             port: *ldapPort
