--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -38,11 +38,11 @@ spec:
 
           # Specify names of the ldap attributes your ldap uses
           [servers.attributes]
-          name = "givenName"
+          name = "displayName"
           surname = "sn"
           username = "uid"
           member_of = "memberOf"
-          email =  "Email"
+          email =  "mail"
 
           [[servers.group_mappings]]
           group_dn = "ou=grafana-admins,ou=groups,{{ .LDAP_ROOT }}"
