--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -41,12 +41,12 @@ spec:
           email =  "mail"
 
           [[servers.group_mappings]]
-          group_dn = "ou=grafana-admins,ou=groups,{{ .LDAP_ROOT }}"
+          group_dn = "cn=grafana-admins,ou=groups,{{ .LDAP_ROOT }}"
           org_role = "Admin"
           org_id = 1
 
           [[servers.group_mappings]]
-          group_dn = "ou=grafana-users,ou=groups,{{ .LDAP_ROOT}}"
+          group_dn = "cn=grafana-users,ou=groups,{{ .LDAP_ROOT}}"
           org_role = "Viewer"
           org_id = 1
   dataFrom:
