--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -43,7 +43,7 @@ spec:
           [[servers.group_mappings]]
           group_dn = "cn=grafana-admins,ou=groups,{{ .LDAP_ROOT }}"
           org_role = "Admin"
-          org_id = 1
+          grafana_admin = true
   dataFrom:
     - extract:
         key: /monitoring/grafana
