--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -41,7 +41,7 @@ spec:
           email =  "mail"
 
           [servers.group_mappings]
-          group_dn = "cn=grafana-admins,ou=groups,{{ .LDAP_ROOT }}"
+          group_dn = "grafana-admin"
           org_role = "Admin"
           grafana_admin = true
   dataFrom:
