--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -40,7 +40,7 @@ spec:
           member_of = "memberOf"
           email =  "mail"
 
-          [servers.group_mappings]
+          [[servers.group_mappings]]
           group_dn = "grafana-admin"
           org_role = "Admin"
           grafana_admin = true
