--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -41,7 +41,7 @@ spec:
           email =  "mail"
 
           [[servers.group_mappings]]
-          group_dn = "grafana-admin"
+          group_dn = "cn=grafana-admin,ou=groups,{{ .LDAP_ROOT }}"
           org_role = "Admin"
           grafana_admin = true
   dataFrom:
