--- a/kubernetes/apps/k8s/monitoring/gatus/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/gatus/app/externalsecret.yaml
@@ -22,4 +22,4 @@ spec:
         GATUS_POSTGRES_PASSWORD: "{{ .GATUS_POSTGRES_PASSWORD }}"        
   dataFrom:
     - extract:
-        key: /gatus
+        key: /monitoring/gatus
