--- a/kubernetes/apps/k8s/monitoring/gatus/database/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/gatus/database/externalsecret.yaml
@@ -52,9 +52,9 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: /gatus
+        key: /monitoring/gatus
         property: GATUS_POSTGRES_USER
     - secretKey: password
       remoteRef:
-        key: /gatus
+        key: /monitoring/gatus
         property: GATUS_POSTGRES_PASSWORD
