--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/externalsecret.yaml
@@ -44,7 +44,7 @@ spec:
           CLIENT="ldapsearch"
           DEBUG=0
           USERNAME_PATTERN='^[a-z|A-Z|0-9|_|-|.]+$'
-          SERVER="ldap://ldap.${PRIVATE_DOMAIN}"
+          SERVER="ldap://lldap.${PRIVATE_DOMAIN}"
           USERDN="uid=$(ldap_dn_escape "$username"),cn=users,{{ .LDAP_ROOT }}"
           BASEDN="$USERDN"
           SCOPE="base"
