--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/externalsecret.yaml
@@ -45,10 +45,10 @@ spec:
           DEBUG=0
           USERNAME_PATTERN='^[a-z|A-Z|0-9|_|-|.]+$'
           SERVER="ldap://lldap.${PRIVATE_DOMAIN}"
-          USERDN="uid=$(ldap_dn_escape "$username"),cn=users,{{ .LDAP_ROOT }}"
+          USERDN="uid=$(ldap_dn_escape "$username"),ou=people,{{ .LDAP_ROOT }}"
           BASEDN="$USERDN"
           SCOPE="base"
-          FILTER="(&(uid=$(ldap_dn_escape "$username"))(memberOf=cn=home-assistant,cn=groups,{{ .LDAP_ROOT }}))"
+          FILTER="(&(uid=$(ldap_dn_escape "$username"))(memberOf=cn=home-assistant,ou=groups,{{ .LDAP_ROOT }}))"
           ATTRS="uid"
           TIMEOUT=3
 
